tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_part2_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_part2_profile.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `solve`.

  examples/aoc/2025/aoc_day1_part2_profile.flx:43:9
   |
43 |         solve(rest, pos, hits)
   |         ^^^^^

Hint:
  Define it first: let solve = ...;


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `count_zeros_right`.

  examples/aoc/2025/aoc_day1_part2_profile.flx:49:44
   |
30 | fn count_zeros_right(pos, distance) {
31 |     let first_zero_click = if pos == 0 { 100 } else { 100 - pos }
32 |     count_hits_for_rotation(first_zero_click, distance)
33 | }
34 | 
35 | fn count_zeros_left(pos, distance) {
36 |     let first_zero_click = if pos == 0 { 100 } else { pos }
37 |     count_hits_for_rotation(first_zero_click, distance)
38 | }
39 | 
40 | fn apply_rotation(line, rest, pos, hits) {
41 |     let cleaned = trim(line)
42 |     if cleaned == "" {
43 |         solve(rest, pos, hits)
44 |     } else {
45 |     let dir = substring(cleaned, 0, 1)
46 |     let distance = parse_int(substring(cleaned, 1, len(cleaned)))
47 | 
48 |     if dir == "R" {
49 |         let zeros = count_zeros_right(pos, distance)
   |                                            ^^^^^^^^
   |                                            -------- this argument has type `Option<Int>`

Note:
  expected argument type: Int
  found argument type: Option<Int>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.


error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day1_part2_profile.flx:50:39
   |
50 |         let next_pos_right = wrap_100(pos + distance)
   |                                       ^^^^^^^^^^^^^^
   |                                       -------------- this expression has type `Option<Int>`

   |                                       -------------- this type mismatch is reported here

Note:
  expected type: Int
  found type: Option<Int>
  the conflicting types meet at this expression

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `count_zeros_left`.

  examples/aoc/2025/aoc_day1_part2_profile.flx:53:44
   |
35 | fn count_zeros_left(pos, distance) {
36 |     let first_zero_click = if pos == 0 { 100 } else { pos }
37 |     count_hits_for_rotation(first_zero_click, distance)
38 | }
39 | 
40 | fn apply_rotation(line, rest, pos, hits) {
41 |     let cleaned = trim(line)
42 |     if cleaned == "" {
43 |         solve(rest, pos, hits)
44 |     } else {
45 |     let dir = substring(cleaned, 0, 1)
46 |     let distance = parse_int(substring(cleaned, 1, len(cleaned)))
47 | 
48 |     if dir == "R" {
49 |         let zeros = count_zeros_right(pos, distance)
50 |         let next_pos_right = wrap_100(pos + distance)
51 |         solve(rest, next_pos_right, hits + zeros)
52 |     } else {
53 |     let zeros_left = count_zeros_left(pos, distance)
   |                                            ^^^^^^^^
   |                                            -------- this argument has type `Option<Int>`

Note:
  expected argument type: Int
  found argument type: Option<Int>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.

Found 4 errors.
== stdout ==
<not executed>
